Differentiate kllama and kllama-cli READMEs, add Java CLI app guide
Rewrite kllama README to focus on the library API (Kotlin/Java embedding,
custom backends, formats) and kllama-cli README to focus on CLI usage
(options, examples for all modes). Fix incorrect constructor signatures
in Kotlin code examples and outdated positional-arg CLI syntax. Convert
docs/kllama-getting-started.md into a landing page. Add new
docs/java-cli-app.md with a complete standalone Java 21+ CLI project
(Maven/Gradle setup, working code, build/run instructions).

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>